Grid Layout Gap Fix

--- a/Styles/bvb_kader.css
+++ b/Styles/bvb_kader.css
@@ -66,7 +66,7 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
     padding: 30px;
-    column-gap: 45px;
+    column-gap: 38px;
 }
 /*Die einzelnen Spieler*/
 .player {
